--- a/clip_fao/fao_clip_pac.Rmd
+++ b/clip_fao/fao_clip_pac.Rmd
@@ -55,34 +55,31 @@ spp_quad_list <- read_csv(file.path(dir_git, 'data', 'spp_list_quads.csv')) %>%
   select(sciname, am_sid, iucn_sid, reviewed, occurcells, quad) %>%
   filter(quad %in% c('q3', 'q4'))
 
-hist(spp_quad_list$occurcells)
 nrow(spp_quad_list %>% filter(occurcells > 100))
 ### 110 out of 1078 (~10%) have more than 100 occurrence cells
 
 ### load full AM list and filter to those in q3 and q4
 am_spp_cells <- read_csv(file.path(dir_anx, 'spp_ico',
-                                   'v2016/int/am_cells_spp_prob0.csv')) %>%
-  filter(am_sid %in% spp_quad_list$am_sid) %>% 
-  distinct()
+                                   'v2016/int/am_cells_spp_prob0.csv')) # %>%
+  # filter(am_sid %in% spp_quad_list$am_sid) %>% 
+  # distinct()
 
+message('loading hcaf and adjusting to se asia')
 ### join with hcaf to get longitudes (and latitudes) for each cell
 hcaf <- read_csv(file.path(dir_anx, '_raw_data/aquamaps/d2015',
                            'csv/hcaf_truncated.csv')) %>%
-  select(-csquarecode)
-
-am_spp_latlong <- am_spp_cells %>%
-  left_join(hcaf, by = 'loiczid')
-
-am_spp_latlong <- am_spp_latlong %>%
+  select(-csquarecode, -cellarea, -oceanarea) %>%
   mutate(clongadj  = ifelse(centerlong < 0, centerlong + 360, centerlong),
          wlimitadj = ifelse(wlimit < 0, wlimit + 360, wlimit),
-         elimitadj = ifelse(elimit < 0, elimit + 360, elimit))
+         elimitadj = ifelse(elimit < 0, elimit + 360, elimit)) %>%
+  filter(clongadj >= 60 & clongadj <= 240)
 
 ### filter out species from Atlantic... rough pass:
 ### - filter out everything west of 30 E and east of 70 W
+message('binding hcaf to am_spp_latlong')
 
-am_spp_latlong <- am_spp_latlong %>%
-  filter(clongadj >= 60 & clongadj <= 240)
+am_spp_latlong <- hcaf %>%
+  left_join(am_spp_cells, by = 'loiczid')
 
 ```
 
@@ -94,7 +91,7 @@ Major fishing area boundaries
 - 80E from 0N to 55S
 - 30 E from Africa on down
         
-``` {r northmost_band}
+``` {r northmost_band, eval = FALSE}
 ### 5N north     - look for spike at 175 W (185E)
 am_spp_north <- am_spp_latlong %>%
   filter(centerlat >= 5) 
@@ -110,8 +107,7 @@ am_spp_north_lims <- am_spp_north %>%
   gather(lim_n, ncells, n_w_lim:n_e_lim) %>%
   filter(str_detect(lim_n, lim)) %>%
   select(-lim_n) %>%
-  mutate(long = ifelse(long <= 70 | long >= 200, NA, long)) %>%
-  filter(!is.na(long))
+  filter(!(long <= 70 | long >= 200))
     ### delete artificially imposed limits
 
 tmp <- am_spp_north_lims %>%
@@ -130,20 +126,25 @@ ggplot(tmp, aes(x = long, y = n_spp)) +
 am_spp_central <- am_spp_latlong %>%
   filter(centerlat <= 5 & centerlat >= -25)
 
+message('summarizing...')
 am_spp_central_lims <- am_spp_central %>%
   group_by(am_sid) %>%
   summarize(w_lim = min(wlimitadj),
             e_lim = max(elimitadj),
             n_w_lim = sum(wlimitadj == w_lim),
             n_e_lim = sum(elimitadj == e_lim),
-            n_tot = n()) %>%
+            n_tot = n())
+
+message('gathering...')
+am_spp_central_lims <- am_spp_central_lims %>%
   gather(lim, long, w_lim:e_lim) %>%
   gather(lim_n, ncells, n_w_lim:n_e_lim) %>%
   filter(str_detect(lim_n, lim)) %>%
   select(-lim_n) %>%
-  mutate(long = ifelse(long <= 70 | long >= 200, NA, long)) %>%
-  filter(!is.na(long))
+  filter(!(long <= 70 | long >= 200))
     ### delete artificially imposed limits
+
+write_csv(am_spp_central_lims, file.path(dir_git, 'clip_fao/am_spp_central_lims.csv'))
 
 tmp <- am_spp_central_lims %>%
   group_by(long) %>%
@@ -194,6 +195,59 @@ assemble_map <- function(map_rast, spp) {
 ```
 
 ``` {r plot_spp_e, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
+
+clipped_spp <- read_csv(file.path(dir_git, 'clip_fao', 'clipped_mid_pac.csv'))
+
+spp_examples_e <- clipped_spp %>%
+  filter(lim == 'w_lim')
+
+message('grouping affected species and summing to loiczid')
+### group affected spp by loiczid and sum
+spp_cells_clipped <- am_spp_cells %>%
+  filter(am_sid %in% spp_examples_e$am_sid) %>%
+  group_by(loiczid) %>%
+  summarize(n_spp = n())
+
+### create raster, then shift raster
+
+rast_spp  <-  subs(loiczid_raster, 
+                   spp_cells_clipped[ , c('loiczid', 'n_spp')], 
+                   by = 'loiczid', 
+                   which = 'n_spp', 
+                   subsWithNA = TRUE)
+
+rast_spp_shift <- rast_spp %>%
+  raster::shift(360)
+
+rast_spp_e <- merge(rast_spp, rast_spp_shift)
+
+values(rast_spp_e)[values(rast_spp_e) == 0] <- NA
+values(rast_spp_e)[is.na(values(rast_spp_e))] <- 0
+rast_spp_e <- crop(rast_spp_e, extent(c(85, 220, -60, 60)))
+
+rast_spp_map_e <- 
+  tm_shape(rast_spp_e) +
+    tm_raster(palette = 'Reds',
+              breaks = c(1, 15, 100, 200, 300, Inf),
+              colorNA = 'lightblue1',
+              textNA = 'Zero',
+              title = 'Species count',
+              alpha = 1) +
+  tm_shape(World) +
+    tm_polygons(border.col = 'grey50', col = 'grey55') + 
+  tm_shape(fao_polys) +
+    tm_borders(col = 'grey40') +
+  tm_layout(basemaps = "Esri.WorldTopoMap", 
+            # title.position = 'TOP', 
+            legend.outside = TRUE, attr.outside = TRUE)
+
+print(rast_spp_map_e)
+
+```
+
+``` {r plot_spp_e, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
+
+clipped_spp <- read_csv(file.path(dir_git, 'clip_fao', 'clipped_mid_pac.csv'))
 
 spp_examples_e <- clipped_spp %>%
   filter(lim == 'w_lim')
@@ -308,7 +362,7 @@ stack_plot_both <-
               title = 'n_spp',
               alpha = 1) +
   tm_shape(mapstack_e) +
-    tm_raster(palette = 'Blues',
+    tm_raster(palette = 'Reds',
               colorNA = NULL,
               title = 'n_spp') +
   tm_shape(World) +
