--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -27,7 +27,9 @@ For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller an
 
 Distribution alignment uses overlapping predictions of presence as means of identifying areas of higher confidence.  Area ratio provides a proxy for frequency of commission and/or omission errors.
 
-To examine errors of commission related to depth, we selected corals as a case study due to their importance in supporting biodiversity as well as their dependence on photosynthesis.  We created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] ___(Fig. SXXX)___ and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
+To examine errors of commission related to depth, we selected corals as a case study due to their importance in supporting biodiversity as well as their dependence on photosynthesis.  Extracting data from the IUCN API [@REF?] we identified the depth limitations of each of the coral species mapped in the IUCN dataset.  We created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] ___(Fig. SXXX)___ and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
+
+AquaMaps uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@REF] boundaries as a rough method of constraining species ranges to appropriate georegions.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to relate to ecological conditions than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 5° S and 25° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.  
 
 To identify data-poor species, we used the ___robis???___ and ___rgbif???___ packages [@REFS] in R to identify known occurrences of each species; occurrences were averaged between the two occurrence databases as a proxy for data richness.
 
