--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -77,20 +77,23 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 [results] In constraining coral ranges to shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig. 2B, we see in Fig. 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  See SXXX to examine the shifts of individual species among the quadrants.
 
-[discussion] We cannot know for certain the true distribution of each of these corals; much of the apparent over-expansion of coral ranges is likely due to experts taking a conservative and precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported ranges.  Note that this change applies just as well to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
+[discussion] We cannot know for certain the true distribution of each of these corals; much of the apparent over-expansion of coral ranges may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported ranges.  Note that this change applies just as well to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
 
-## Georegion constraint exploration
+## Georegional constraint exploration
 
 - AM clipped map
 
-[results] 
+[results] We identified 4,168 species whose equatorial ranges encounter a range limit at 175° W.  This longitude created a western limit for 512 species, and eastern limit for 3,656.  Plotting the entire ranges of the 512 west-limited species results in a very clear exclusion zone that matches perfectly with FAO region 71; while we did not focus on the boundary for region 57, a similar effect is readily apparent.
 
-[discussion]
+[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd species range predictions where otherwise suitable habitat encounters border between regions.  While such an odd boundary would likely be obvious when inspecting ranges of individual species, the distinction is likely to be obscured when many species ranges are aggregated as is typical for biodiversity or conservation studies.  Applying an additional spatial constraint based upon ecological or environmental boundaries, such as Marine Ecoregions of the World [@REF???], may help boost confidence in these predicted ranges; expert review, though time-consuming, is certain to improve confidence in these predicted ranges.
 
-## Case Studies
+<!-- ## Case Studies
 
 To examine the implications of differences between the AquaMaps and IUCN predicted species ranges, we repeated two recent studies, varying only the selection of one data set over the other.
 
+-->
+
+<!--
 ### Case Study: The Ocean Health Index
 
 ``` {r calc_ohi_numbers, echo = FALSE, message = FALSE, warning = FALSE}
@@ -127,7 +130,9 @@ _We calculated the OHI species status score under several scenarios to observe t
  
 _Given that only `r p_spp_both_ohi`% of Red List-assessed species are included in both datasets, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in substantial country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a different assessment of species conservation status._
 
-### Case Study: MPA Gap Analysis
+-->
+
+## Case Study: MPA Gap Analysis
 
 Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
